--- a/career.html
+++ b/career.html
@@ -150,28 +150,28 @@
                     <form class="form_container_in" id="careerForm">
                         <div class="row form_field_container flex-column flex-sm-row ">
                             <div class="col">
-                                <input type="text" name="name" id="customer_first_name" placeholder="First Name*" class="form-control field" aria-label="First name" required>
+                                <input type="text" name="name" id="customer_first_name" placeholder="First Name*" class="form-control field" aria-label="First name" required />
                                 <p class="text-danger" id="customer_fname"></p>
                             </div>
                             <div class="col ">
-                                <input type="text" name="name" id="customer_last_name" placeholder="Last Name*" class="form-control field" aria-label="Last name" required>
+                                <input type="text" name="name" id="customer_last_name" placeholder="Last Name*" class="form-control field" aria-label="Last name" required />
                                 <p class="text-danger" id="customer_lname"></p>
                             </div>
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row">
                             <div class="col ">
-                                <input type="email" name="email" id="customer_email" placeholder="Email*" required class="field form-control">
+                                <input type="email" name="email" id="customer_email" placeholder="Email*" required class="field form-control"/>
                                 <p class="text-danger" id="customer_email_w"></p>
                             </div>
                             <div class="col ">
-                                <input type="number" name="number" id="customer_number" placeholder="Phone Number*" required class="field form-control">
+                                <input type="number" name="number" id="customer_number" placeholder="Phone Number*" required class="field form-control"/>
                                 <p class="text-danger" id="customer_number_w"></p>
                             </div>
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row ">
                             <div class="col ">
                                 <div class='file-input d-flex align-items-center justify-content-between mb-4 position-relative border rounded-1'>
-                                    <input type='file' id="customer_data" class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0">
+                                    <input type='file' id="customer_data" class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0"/>
                                     <span class='label' data-js-label>Resume</span>
                                     <span class='button'>Browse</span>
                                 </div>
