--- a/industrial/products/index.html
+++ b/industrial/products/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
+    <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
@@ -337,7 +337,7 @@
                                         <span class="col-12 d-flex justify-content-between">
                                             <span class="m-0 footer-link-title">Quick Link</span>
                                             <span class="m-0 footer-link-icon "><i
-                                                    class="fa-solid fa-angle-down mt-1 me-5"></i></span>
+                                                class="fa-solid fa-angle-down mt-1 me-5"></i></span>
                                         </span>
 
                                     </button>
