--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <!-- main css -->
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
-    <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
+    <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
     <link rel="stylesheet" href="/assets/css/style.css" />
 
 </head>
