--- a/career.html
+++ b/career.html
@@ -191,7 +191,7 @@
                         </div>
                         <div class="sparkle-button">
                             <div class="sparkle-button career-form-btn">
-                                <button onclick=" return demo()" class="btn2 d-flex align-items-center" type="submit">
+                                <button class="btn2 d-flex align-items-center" type="submit">
                                     <span class="about-btn d-flex align-items-center justify-content-center">
                                         <i class="fa-solid fa-arrow-up-long"></i>
                                     </span>
@@ -505,9 +505,7 @@
     </script>
 
     <script>
-        const demo = () => {
-            event.preventDefault();
-            console.log("ok");
+
             document.getElementById('careerForm').addEventListener('submit', async function (event) {
 
 
@@ -539,7 +537,7 @@
                     alert('Error form ' + error.message);
                 }
             });
-        }
+        
 
     </script>
     <!-- Script end -->
