data form complit

--- a/career.html
+++ b/career.html
@@ -167,7 +167,7 @@
                                 <p class="text-danger" id="customer_email_w"></p>
                             </div>
                             <div class="col">
-                                <input type="number" name="number" id="customer_number" placeholder="Phone Number*"
+                                <input type="number" name="customernumber" id="customer_number" placeholder="Phone Number*"
                                     required class="field form-control" />
                                 <p class="text-danger" id="customer_number_w"></p>
                             </div>
