--- a/career.html
+++ b/career.html
@@ -185,7 +185,7 @@
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row">
                             <div class="col">
-                                <textarea placeholder="Your Message" id="customer_message" name="career_message"
+                                <textarea placeholder="Your Message" id="customer_message" name="Career_Message"
                                     class="form-control w-100 field message_field"></textarea>
                             </div>
                         </div>
