--- a/career.html
+++ b/career.html
@@ -162,7 +162,7 @@
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row">
                             <div class="col">
-                                <input type="email" name="email" id="customer_email" placeholder="Email*" required
+                                <input type="email" name="customer_email" id="customer_email" placeholder="Email*" required
                                     class="field form-control" />
                                 <p class="text-danger" id="customer_email_w"></p>
                             </div>
