--- a/career.html
+++ b/career.html
@@ -162,12 +162,12 @@
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row">
                             <div class="col">
-                                <input type="email" name="customer_email" id="customer_email" placeholder="Email" required
+                                <input type="email" name="email" id="customer_email" placeholder="Email*" required
                                     class="field form-control" />
                                 <p class="text-danger" id="customer_email_w"></p>
                             </div>
                             <div class="col">
-                                <input type="number" name="customer_number" id="customer_number" placeholder="Phone Number*"
+                                <input type="number" name="number" id="customer_number" placeholder="Phone Number*"
                                     required class="field form-control" />
                                 <p class="text-danger" id="customer_number_w"></p>
                             </div>
