--- a/career.html
+++ b/career.html
@@ -191,7 +191,7 @@
                         </div>
                         <div class="sparkle-button">
                             <div class="sparkle-button career-form-btn">
-                                <button class="btn2 d-flex align-items-center" type="submit">
+                                <button onclick="return careerForm()" class="btn2 d-flex align-items-center" type="submit">
                                     <span class="about-btn d-flex align-items-center justify-content-center">
                                         <i class="fa-solid fa-arrow-up-long"></i>
                                     </span>
@@ -505,7 +505,8 @@
     </script>
 
     <script>
-        $(function() {
+        const careerForm = () => {
+            $(function() {
            $("form#careerForm").submit(function(e) {
                 e.preventDefault();    
                 var formData = new FormData(this);
@@ -524,37 +525,10 @@
                 });
             });
         });
+        console.log("ok");
+        }
+       
         
-        // document.getElementById('careerForm').addEventListener('submit', async function (event) {
-        //     event.preventDefault();
-
-        //     const formData = new FormData();
-        //     formData.append('first_name', document.getElementById('customer_first_name').value);
-        //     formData.append('last_name', document.getElementById('customer_last_name').value);
-        //     formData.append('email', document.getElementById('customer_email').value);
-        //     formData.append('number', document.getElementById('customer_number').value);
-        //     formData.append('resume', document.getElementById('customer_data').files[0]);
-        //     formData.append('career_message', document.getElementById('customer_message').value);
-
-        //     try {
-        //         const response = await fetch('https://ecomaxlubricant.com/api/index.php?a=career', {
-        //             method: 'POST',
-        //             body: formData
-        //         });
-
-        //         if (response.ok) {
-        //             const result = await response.json();
-        //             alert('Form submitted successfully: ' + JSON.stringify(result));
-        //         } else {
-        //             alert('Failed to submit form: ' + response.statusText);
-        //         }
-        //     } catch (error) {
-        //         alert('Error submitting form: ' + error.message);
-        //     }
-        // });
-
-
-
     </script>
     <!-- Script end -->
 </body>
