--- a/career.html
+++ b/career.html
@@ -147,7 +147,7 @@
             </div>
             <div class="row p-0 image_with_form_container align-items-center">
                 <div class="col-12 pe-0 form_container order-1 order-sm-0 col-sm-7 ">
-                    <form class="form_container_in" enctype="multipart/form-data">
+                    <form class="form_container_in" enctype="multipart/form-data" id="careerForm">
                         <div class="row form_field_container flex-column flex-sm-row">
                             <div class="col">
                                 <input type="text" name="first_name" id="customer_first_name" placeholder="First Name*"
@@ -191,7 +191,7 @@
                         </div>
                         <div class="sparkle-button">
                             <div class="sparkle-button career-form-btn">
-                                <button class="btn2 d-flex align-items-center"  id="careerForm" type="submit">
+                                <button class="btn2 d-flex align-items-center" type="submit">
                                     <span class="about-btn d-flex align-items-center justify-content-center">
                                         <i class="fa-solid fa-arrow-up-long"></i>
                                     </span>
